# epaper-display-server

./: .env  .gitignore  README.md  docker-compose.yml  pyproject.toml
.gitea/workflows/: pytest.yaml
nginx/etc/nginx/conf.d/: epaper-display-server.conf
renderer/: app.py  config.py  main.py
renderer/apps/: textutils.py
renderer/apps/dashboard/: app.py  influx.py  sun.py  weather.py  widget.py
renderer/apps/dashboard/data/: .gitignore
renderer/apps/dashboard/data/weather-icons/: .gitignore  Makefile  README.md
renderer/apps/hiking_quiz/: app.py  textutils.py
renderer/apps/hiking_quiz/data/: .gitignore
renderer/apps/hiking_quiz/test/: test_textutils.py
renderer/apps/test/: test_textutils.py
