[project]
name = "epaper-display-server"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "openmeteo-requests>=1.3.0",
    "requests-cache>=1.2.1",
    "retry-requests>=2.0.0",
    "hikingplots",
    "numpy>=2.2.4",
    "pillow>=11.1.0",
    "pyyaml>=6.0.2",
    "influxdb-client>=1.48.0",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "I", "F"]

[tool.uv.sources]
hikingplots = { git = "https://github.com/ma-rapp/hikingplots.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.3.5",
    "ruff>=0.8",
]
